--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: atproto
-description: A starting point for Dart libraries or applications.
+description: The Easiest and Powerful Dart/Flutter Library for AT Protocol.
 version: 0.0.1
 repository: https://github.com/myConsciousness/atproto.dart.dart.dart
 issue_tracker: https://github.com/myConsciousness/atproto.dart.dart.dart/issues
