fix: fixed links

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: atproto
 description: The Easiest and Powerful Dart/Flutter Library for AT Protocol.
 version: 0.0.1
-repository: https://github.com/myConsciousness/atproto.dart.dart.dart
-issue_tracker: https://github.com/myConsciousness/atproto.dart.dart.dart/issues
+repository: https://github.com/myConsciousness/atproto.dart
+issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 
 environment:
   sdk: '>=2.19.2 <3.0.0'
