--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: atproto
 description: The Easiest and Powerful Dart/Flutter Library for AT Protocol.
-version: 0.0.4
+version: 0.1.0
 repository: https://github.com/myConsciousness/atproto.dart
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
-
 environment:
   sdk: ">=2.19.2 <3.0.0"
 
 dependencies:
+  atproto_core: ^0.0.2
   http: ^0.13.5
   universal_io: ^2.2.0
   freezed_annotation: ^2.2.0
