--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
+  atproto_core: ^0.0.2
   atproto: ^0.0.4
   http: ^0.13.5
   universal_io: ^2.2.0
