--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,11 +1,46 @@
-client:
-- lib/src/core/client/*.dart
+core:
+- packages/atproto_core/lib/src/**/*.dart
+
+atproto/lexicon/accounts:
+- packages/atproto/lib/src/service/accounts/*.dart
+atproto/lexicon/admin:
+- packages/atproto/lib/src/service/admin/*.dart
+atproto/lexicon/blob:
+- packages/atproto/lib/src/service/blob/*.dart
+atproto/lexicon/handles:
+- packages/atproto/lib/src/service/handles/*.dart
+atproto/lexicon/repositories:
+- packages/atproto/lib/src/service/repositories/*.dart
+atproto/lexicon/reports:
+- packages/atproto/lib/src/service/reports/*.dart
+atproto/lexicon/servers:
+- packages/atproto/lib/src/service/servers/*.dart
+atproto/lexicon/sessions:
+- packages/atproto/lib/src/service/sessions/*.dart
+atproto/lexicon/syncs:
+- packages/atproto/lib/src/service/syncs/*.dart
+
+bsky/lexicon/actors:
+- packages/bluesky/lib/src/service/actors/*.dart
+bsky/lexicon/feeds:
+- packages/bluesky/lib/src/service/feeds/*.dart
+bsky/lexicon/embed:
+- packages/bluesky/lib/src/service/embed/*.dart
+bsky/lexicon/graphs:
+- packages/bluesky/lib/src/service/graphs/*.dart
+bsky/lexicon/notifications:
+- packages/bluesky/lib/src/service/notifications/*.dart
+bsky/lexicon/systems:
+- packages/bluesky/lib/src/service/systems/*.dart
 
 test:
-- test/**/*.dart
+- packages/atproto_core/test/**/*.dart
+- packages/atproto/test/**/*.dart
+- packages/bluesky/test/**/*.dart
 
 documentation:
-- README.md
+- **/CHANGELOG.md
+- **/README.md
 - CODE_OF_CONDUCT.md
 - CONTRIBUTING.md
 - SECURITY.md
