--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bluesky
 description: The Easiest and Powerful Dart/Flutter Library for Bluesky Social.
 version: 0.1.0
-repository: https://github.com/myConsciousness/atproto.dart/packages/bluesky
+repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
