--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,11 +1,13 @@
 atproto_core:
 - packages/atproto_core/**/*
+lexicon:
+- packages/lexicon/**/*
 atproto:
 - packages/atproto/**/*
 bluesky:
 - packages/bluesky/**/*
-lexicon:
-- packages/lexicon/**/*
+bluesky_cards:
+- packages/bluesky_cards/**/*
 
 atproto/lexicon/accounts:
 - packages/atproto/lib/src/service/accounts/*.dart
@@ -43,6 +45,7 @@ test:
 - packages/atproto_core/test/**/*.dart
 - packages/atproto/test/**/*.dart
 - packages/bluesky/test/**/*.dart
+- packages/bluesky_cards/test/**/*.dart
 
 documentation:
 - packages/atproto_core/CHANGELOG.md
@@ -51,6 +54,8 @@ documentation:
 - packages/atproto/README.md
 - packages/bluesky/CHANGELOG.md
 - packages/bluesky/README.md
+- packages/bluesky_cards/CHANGELOG.md
+- packages/bluesky_cards/README.md
 - CODE_OF_CONDUCT.md
 - CONTRIBUTING.md
 - SECURITY.md
