feat: fixed for the issue (#105)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,16 @@
     "atproto",
     "Bluesky",
     "bsky",
+    "bskyc",
+    "downvote",
     "Kato",
     "Repost",
+    "Reposted",
     "rkey",
+    "Roboto",
     "Shinya",
     "shinyakato",
+    "upvote",
     "xrpc"
   ],
   "[markdown]": {
