--- a/packages/bluesky_cards/example/pubspec.yaml
+++ b/packages/bluesky_cards/example/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
     sdk: flutter
   bluesky_cards:
     path: ../../bluesky_cards
-  bluesky: ^0.2.3
+  bluesky:
+    path: ../../bluesky
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
