--- a/packages/bluesky_cards/pubspec.yaml
+++ b/packages/bluesky_cards/pubspec.yaml
@@ -1,7 +1,10 @@
 name: bluesky_cards
-description: A new Flutter package project.
+description: Provide widgets to render Bluesky Social post content beautifully in Flutter app.
 version: 0.0.1
-
+repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky_cards
+issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
+funding:
+  - https://github.com/sponsors/myConsciousness
 environment:
   sdk: '>=2.19.2 <3.0.0'
   flutter: ">=1.17.0"
@@ -9,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bluesky: ^0.2.3
+  bluesky: ^0.2.4
   cached_network_image: ^3.2.3
   html_unescape: ^2.0.0
   url_launcher: ^6.1.10
