--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,5 @@
+xrpc:
+- packages/xrpc/**/*
 atproto_core:
 - packages/atproto_core/**/*
 lexicon:
@@ -44,12 +46,15 @@ bsky/lexicon/unspecced:
 - packages/bluesky/lib/src/service/unspecced/*.dart
 
 test:
+- packages/xrpc/test/**/*.dart
 - packages/atproto_core/test/**/*.dart
 - packages/atproto/test/**/*.dart
 - packages/bluesky/test/**/*.dart
 - packages/bluesky_cards/test/**/*.dart
 
 documentation:
+- packages/xrpc/CHANGELOG.md
+- packages/xrpc/README.md
 - packages/atproto_core/CHANGELOG.md
 - packages/atproto_core/README.md
 - packages/atproto/CHANGELOG.md
