--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,14 +4,17 @@
     "Bluesky",
     "bsky",
     "bskyc",
+    "delim",
     "downvote",
     "Kato",
+    "NSID",
     "Repost",
     "Reposted",
     "rkey",
     "Roboto",
     "Shinya",
     "shinyakato",
+    "sublist",
     "Typeahead",
     "Unmute",
     "Unspecced",
