--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,5 @@
+nsid:
+- packages/nsid/**/*
 xrpc:
 - packages/xrpc/**/*
 atproto_core:
@@ -46,6 +48,7 @@ bsky/lexicon/unspecced:
 - packages/bluesky/lib/src/service/unspecced/*.dart
 
 test:
+- packages/nsid/test/**/*.dart
 - packages/xrpc/test/**/*.dart
 - packages/atproto_core/test/**/*.dart
 - packages/atproto/test/**/*.dart
@@ -53,6 +56,8 @@ test:
 - packages/bluesky_cards/test/**/*.dart
 
 documentation:
+- packages/nsid/CHANGELOG.md
+- packages/nsid/README.md
 - packages/xrpc/CHANGELOG.md
 - packages/xrpc/README.md
 - packages/atproto_core/CHANGELOG.md
