--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,5 +1,7 @@
 nsid:
 - packages/nsid/**/*
+at_uri:
+- packages/at_uri/**/*
 xrpc:
 - packages/xrpc/**/*
 atproto_core:
@@ -49,6 +51,7 @@ bsky/lexicon/unspecced:
 
 test:
 - packages/nsid/test/**/*.dart
+- packages/at_uri/test/**/*.dart
 - packages/xrpc/test/**/*.dart
 - packages/atproto_core/test/**/*.dart
 - packages/atproto/test/**/*.dart
@@ -58,6 +61,8 @@ test:
 documentation:
 - packages/nsid/CHANGELOG.md
 - packages/nsid/README.md
+- packages/at_uri/CHANGELOG.md
+- packages/at_uri/README.md
 - packages/xrpc/CHANGELOG.md
 - packages/xrpc/README.md
 - packages/atproto_core/CHANGELOG.md
