--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,6 +27,7 @@ jobs:
           - stable
         package_path:
           - packages/nsid
+          - packages/at_uri
           - packages/atproto_core
           - packages/atproto
           - packages/bluesky
