feat: added `at_identifier` package

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,7 @@ jobs:
         channel:
           - stable
         package_path:
+          - packages/at_identifier
           - packages/nsid
           - packages/at_uri
           - packages/atproto_core
