feat: implemented xrpc

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,6 +29,7 @@ jobs:
           - packages/at_identifier
           - packages/nsid
           - packages/at_uri
+          - packages/xrpc
           - packages/atproto_core
           - packages/atproto
           - packages/bluesky
