--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xrpc
-description: Provide an HTTP client specialized for XRPC in AT Protocol.
-version: 0.0.0
+description: Provide an HTTP client specialized for XRPC communication in AT Protocol.
+version: 0.0.1
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -11,7 +11,15 @@ environment:
 
 dependencies:
   http: ^0.13.5
+  meta: ^1.9.0
+  nsid: ^0.0.3
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
+  freezed: ^2.3.2
+  atproto: ^0.1.2
