--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -10,7 +10,9 @@ environment:
 
 dependencies:
   xrpc: ^0.0.3
+  at_uri: ^0.0.2
   universal_io: ^2.2.0
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   lints: ^2.0.0
