--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -6,6 +6,8 @@ at_uri:
 - packages/at_uri/**/*
 xrpc:
 - packages/xrpc/**/*
+atproto_test:
+- packages/atproto_test/**/*
 atproto_core:
 - packages/atproto_core/**/*
 lexicon:
@@ -56,6 +58,7 @@ test:
 - packages/nsid/test/**/*.dart
 - packages/at_uri/test/**/*.dart
 - packages/xrpc/test/**/*.dart
+- packages/atproto_test/test/**/*.dart
 - packages/atproto_core/test/**/*.dart
 - packages/atproto/test/**/*.dart
 - packages/bluesky/test/**/*.dart
@@ -70,6 +73,8 @@ documentation:
 - packages/at_uri/README.md
 - packages/xrpc/CHANGELOG.md
 - packages/xrpc/README.md
+- packages/atproto_test/CHANGELOG.md
+- packages/atproto_test/README.md
 - packages/atproto_core/CHANGELOG.md
 - packages/atproto_core/README.md
 - packages/atproto/CHANGELOG.md
