--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -17,11 +17,11 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
+  atproto_test: ^0.0.1
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
   freezed: ^2.3.2
   import_sorter: ^4.6.0
-  http: ^0.13.5
 
 import_sorter:
   emojis: true
