--- a/.github/workflows/auto_mirror_lexicons.yml
+++ b/.github/workflows/auto_mirror_lexicons.yml
@@ -16,9 +16,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "${{ github.actor }}"
-          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
-          git checkout -b auto-mirror-lexicons
+          git switch -c auto-mirror-lexicons
           git push -u origin auto-mirror-lexicons
 
       - name: Install dependencies
