--- a/packages/bluesky_cli/pubspec.yaml
+++ b/packages/bluesky_cli/pubspec.yaml
@@ -1,6 +1,6 @@
-name: bsky
+name: bluesky_cli
 description: A powerful CLI tool that allows Bluesky Social's API to be executed from the command line powered by Dart language.
-version: 0.0.0
+version: 0.0.1
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky_cli
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -13,7 +13,8 @@ executables:
   bsky:
 
 dependencies:
-  bluesky: ^0.2.5
+  xrpc: ^0.0.3
+  at_uri: ^0.0.3
   ansi_styles: ^0.3.1
   args: ^2.0.0
   cli_launcher: ^0.3.0
