--- a/packages/bluesky_post/action.yaml
+++ b/packages/bluesky_post/action.yaml
@@ -1,5 +1,5 @@
 name: "Send Bluesky Post"
-description: "Provide an easy way to post to Bluesky from Github Actions."
+description: "Provide an easy way to post to Bluesky Social from Github Actions."
 author: 'Shinya Kato'
 inputs:
   text:
@@ -7,16 +7,20 @@ inputs:
   handle:
     description: >
       Handle name of the user who logs into Bluesky.
-      This information is used by the PDS server to establish a session.
+      This information is used by the ATP server to establish a session.
       For example, "shinyakato.bsky.social".
   password:
     description: >
       Password of the user who logs into Bluesky.
-      This information is used by the PDS server to establish a session.
+      This information is used by the ATP server to establish a session.
   service:
     description: >
-      Specify the authority of the PDS server to which you wish to post.
+      Specify the authority of the ATP server to which you wish to post.
       If omitted, it will always be "bsky.social".
+  retry-count:
+    description: >
+      Specify the number of retry on server error or network error.
+      If omitted, it will always be "5".
 
 runs:
   using: "docker"
