--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -30,8 +30,8 @@ atproto/lexicon/admin:
 - packages/atproto/lib/src/admin/*.dart
 atproto/lexicon/blob:
 - packages/atproto/lib/src/blob/*.dart
-atproto/lexicon/handles:
-- packages/atproto/lib/src/handles/*.dart
+atproto/lexicon/identities:
+- packages/atproto/lib/src/identities/*.dart
 atproto/lexicon/repositories:
 - packages/atproto/lib/src/repositories/*.dart
 atproto/lexicon/reports:
