--- a/packages/bluesky_post/action.yaml
+++ b/packages/bluesky_post/action.yaml
@@ -4,9 +4,9 @@ author: 'Shinya Kato'
 inputs:
   text:
     description: Text to be posted to Bluesky.
-  handle:
+  identifier:
     description: >
-      Handle name of the user who logs into Bluesky.
+      Handle name or email of the user who logs into Bluesky.
       This information is used by the ATP server to establish a session.
       For example, "shinyakato.bsky.social".
   password:
