--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -12,6 +12,8 @@ environment:
 dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
+  json_schema2: ^2.0.4+3
+  nsid: ^0.0.3
 
 dev_dependencies:
   lints: ^2.0.1
