feat: supported stream api (#318)

--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xrpc
 description: Provide an HTTP client specialized for XRPC communication in AT Protocol.
-version: 0.0.13
+version: 0.0.14
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -16,6 +16,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   mime: ^1.0.4
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   lints: ^2.0.0
