--- a/packages/plc_directory/pubspec.yaml
+++ b/packages/plc_directory/pubspec.yaml
@@ -10,7 +10,8 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
-  http: ^0.13.5
+  http: ^0.13.6
+  atproto_core: ^0.2.10
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
 
