feat: added `bluesky_text`

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,6 +32,7 @@ jobs:
           - packages/xrpc
           - packages/atproto_core
           - packages/atproto
+          - packages/bluesky_text
           - packages/bluesky
 
     steps:
