--- a/packages/bluesky_post/pubspec.yaml
+++ b/packages/bluesky_post/pubspec.yaml
@@ -1,12 +1,13 @@
 name: bluesky_post
 description: A server app using the shelf package and Docker.
-version: 2.0.0
+version: 3.0.0
 environment:
   sdk: '>=2.19.2 <3.0.0'
 
 dependencies:
   actions_toolkit_dart: ^0.5.1
-  bluesky: ^0.3.3
+  bluesky: ^0.4.6
+  bluesky_text: ^0.1.1
 
 dev_dependencies:
   lints: ^2.0.0
