--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -22,6 +22,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   freezed: ^2.3.2
   import_sorter: ^4.6.0
+  bluesky_text: ^0.1.1
 
 import_sorter:
   emojis: true
