--- a/packages/at_identifier/pubspec.yaml
+++ b/packages/at_identifier/pubspec.yaml
@@ -1,13 +1,13 @@
 name: at_identifier
 description: Provide standard validation for identifier supported by AT Protocol to Dart/Flutter.
-version: 0.0.3
+version: 0.1.0
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_identifier
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.17.0 <4.0.0"
 
 dev_dependencies:
   lints: ^2.0.0
