--- a/packages/at_uri/pubspec.yaml
+++ b/packages/at_uri/pubspec.yaml
@@ -1,17 +1,17 @@
 name: at_uri
 description: Provide standard uri supported by AT Protocol to Dart/Flutter.
-version: 0.0.3
+version: 0.1.0
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_uri
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
-  at_identifier: ^0.0.3
-  nsid: ^0.0.3
+  at_identifier: ^0.1.0
+  nsid: ^0.1.0
 
 dev_dependencies:
   lints: ^2.0.0
