--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -7,7 +7,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   freezed_annotation: ^2.2.0
