--- a/packages/bluesky/pubspec_overrides.yaml
+++ b/packages/bluesky/pubspec_overrides.yaml
@@ -1,8 +1,16 @@
 dependency_overrides:
+  at_identifier:
+    path: ../at_identifier
+  nsid:
+    path: ../nsid
+  at_uri:
+    path: ../at_uri
   xrpc:
     path: ../xrpc
   atproto_core:
     path: ../atproto_core
+  atproto_test:
+    path: ../atproto_test
   atproto:
     path: ../atproto
   bluesky_text:
