--- a/.github/workflows/auto_mirror_lexicons.yml
+++ b/.github/workflows/auto_mirror_lexicons.yml
@@ -12,6 +12,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Delete Old Branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git fetch origin
+          if git show-ref --quiet refs/remotes/origin/auto-mirror-lexicons; then
+            git push origin --delete auto-mirror-lexicons
+          fi
+
       - name: Create New Branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
