--- a/.github/workflows/auto_update_examples_index.yml
+++ b/.github/workflows/auto_update_examples_index.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
+          ref: ${{ github.head_ref }}
           fetch-depth: 0  # fetch complete history for all branches and tags
 
       - uses: dart-lang/setup-dart@v1.3
