fix: fixed commit message

--- a/.github/workflows/auto_update_examples_index.yml
+++ b/.github/workflows/auto_update_examples_index.yml
@@ -34,6 +34,6 @@ jobs:
           if [ -z "$(git status --porcelain)" ]; then
             echo "No changes to commit"
           else
-            git commit -m "Update examples index" -a
+            git commit -m "[SCHEDULED] update index" -a
             git push
           fi
