--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,6 +30,7 @@ jobs:
           - packages/nsid
           - packages/at_uri
           - packages/xrpc
+          - packages/cid
           - packages/atproto_core
           - packages/atproto
           - packages/bluesky_text
