--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -11,8 +11,8 @@ at_uri:
 - packages/at_uri/**/*
 xrpc:
 - packages/xrpc/**/*
-cid:
-- packages/cid/**/*
+multiformats:
+- packages/multiformats/**/*
 atproto_test:
 - packages/atproto_test/**/*
 atproto_core:
@@ -69,7 +69,7 @@ test:
 - packages/nsid/test/**/*.dart
 - packages/at_uri/test/**/*.dart
 - packages/xrpc/test/**/*.dart
-- packages/cid/test/**/*.dart
+- packages/multiformats/test/**/*.dart
 - packages/atproto_test/test/**/*.dart
 - packages/atproto_core/test/**/*.dart
 - packages/atproto/test/**/*.dart
@@ -87,8 +87,8 @@ documentation:
 - packages/at_uri/README.md
 - packages/xrpc/CHANGELOG.md
 - packages/xrpc/README.md
-- packages/cid/CHANGELOG.md
-- packages/cid/README.md
+- packages/multiformats/CHANGELOG.md
+- packages/multiformats/README.md
 - packages/atproto_test/CHANGELOG.md
 - packages/atproto_test/README.md
 - packages/atproto_core/CHANGELOG.md
