feat: added `CID.create` (#477)

--- a/packages/multiformats/pubspec.yaml
+++ b/packages/multiformats/pubspec.yaml
@@ -1,6 +1,6 @@
 name: multiformats
 description: Provide useful interfaces such a CID used by AT Protocol to Dart/Flutter.
-version: 0.0.1
+version: 0.1.0
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/multiformats
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -11,6 +11,8 @@ environment:
 
 dependencies:
   base_codecs: ^1.0.1
+  crypto: ^3.0.3
+  dart_multihash: ^0.0.1
 
 dev_dependencies:
   lints: ^2.0.0
