fix: improved hash code generation (#490)

--- a/packages/bluesky_post/pubspec_overrides.yaml
+++ b/packages/bluesky_post/pubspec_overrides.yaml
@@ -1,6 +1,10 @@
 dependency_overrides:
   xrpc:
     path: ../xrpc
+  multiformats:
+    path: ../multiformats
+  atproto_core:
+    path: ../atproto_core
   atproto:
     path: ../atproto
   bluesky_text:
