--- a/packages/bluesky/pubspec_overrides.yaml
+++ b/packages/bluesky/pubspec_overrides.yaml
@@ -7,6 +7,8 @@ dependency_overrides:
     path: ../at_uri
   xrpc:
     path: ../xrpc
+  multiformats:
+    path: ../multiformats
   atproto_core:
     path: ../atproto_core
   atproto_test:
