--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -1,17 +1,5 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
-
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+shinya:
+  name: Shinya Kato / 加藤 真也
+  title: Author of atproto.dart
+  url: https://github.com/myConsciousness
+  image_url: https://avatars.githubusercontent.com/u/13072231?v=4
