feat: add impls

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
     "dids",
     "downvote",
     "Facetable",
+    "fira",
     "fullsize",
     "IPFS",
     "Ipld",
@@ -31,6 +32,7 @@
     "Repost",
     "Reposted",
     "Reposts",
+    "riverpod",
     "rkey",
     "Roboto",
     "Shinya",
