fix: exposed objects from `universal_io` (#541)

--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xrpc
 description: Provide an HTTP client specialized for XRPC communication in AT Protocol.
-version: 0.1.4
+version: 0.1.5
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -17,6 +17,7 @@ dependencies:
   json_annotation: ^4.8.0
   mime: ^1.0.4
   web_socket_channel: ^2.4.0
+  universal_io: ^2.2.2
 
 dev_dependencies:
   lints: ^2.0.0
