--- a/packages/multiformats/pubspec.yaml
+++ b/packages/multiformats/pubspec.yaml
@@ -1,6 +1,7 @@
 name: multiformats
 description: Provide useful interfaces such a CID used by AT Protocol to Dart/Flutter.
-version: 0.1.3
+version: 0.1.4
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/multiformats
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -12,7 +13,7 @@ environment:
 dependencies:
   base_codecs: ^1.0.1
   crypto: ^3.0.3
-  dart_multihash: ^0.0.1
+  dart_multihash: ^0.2.0
 
 dev_dependencies:
   lints: ^2.0.0
