--- a/packages/at_identifier/pubspec.yaml
+++ b/packages/at_identifier/pubspec.yaml
@@ -1,6 +1,7 @@
 name: at_identifier
 description: Provide standard validation for identifier supported by AT Protocol to Dart/Flutter.
-version: 0.1.0
+version: 0.1.1
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_identifier
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
