--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,7 @@
 name: atproto_core
 description: This package provides core reusable and useful functionality for wrapping At Protocol and related services.
 version: 0.3.6
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -10,10 +11,10 @@ environment:
 
 dependencies:
   xrpc: ^0.1.5
-  at_uri: ^0.1.0
+  at_uri: ^0.1.1
   freezed_annotation: ^2.2.0
   cbor: ^6.0.0
-  multiformats: ^0.1.3
+  multiformats: ^0.1.4
 
 dev_dependencies:
   lints: ^2.0.0
