--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -1,6 +1,7 @@
 name: atproto_test
 description: This package provides core reusable and useful functionality for testing atproto based packages.
 version: 0.1.2
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_test
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
