--- a/packages/bluesky_cards/example/pubspec_overrides.yaml
+++ b/packages/bluesky_cards/example/pubspec_overrides.yaml
@@ -1,6 +1,21 @@
 dependency_overrides:
-  bluesky:
-    path: ../../bluesky
+  at_identifier:
+    path: ../../at_identifier
+  nsid:
+    path: ../../nsid
+  at_uri:
+    path: ../../at_uri
+  xrpc:
+    path: ../../xrpc
+  multiformats:
+    path: ../../multiformats
+  atproto_core:
+    path: ../../atproto_core
+  atproto_test:
+    path: ../../atproto_test
   atproto:
     path: ../../atproto
+  bluesky:
+    path: ../../bluesky
   meta: ^1.8.0
+  collection: ^1.17.2
