--- a/packages/bluesky_cards/pubspec.yaml
+++ b/packages/bluesky_cards/pubspec.yaml
@@ -1,18 +1,19 @@
 name: bluesky_cards
-description: Provide widgets to render Bluesky Social post content beautifully in Flutter app.
-version: 0.0.2
+description: Provide widgets to render Bluesky Social post beautifully in Flutter app.
+version: 0.0.3
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky_cards
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: '>=2.19.2 <4.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  bluesky: ^0.3.2
+  bluesky: ^0.6.1
   cached_network_image: ^3.2.3
   html_unescape: ^2.0.0
   url_launcher: ^6.1.10
