--- a/packages/bluesky_cli/pubspec.yaml
+++ b/packages/bluesky_cli/pubspec.yaml
@@ -1,6 +1,7 @@
 name: bluesky_cli
 description: A powerful CLI tool that allows Bluesky Social's APIs to be executed from the command line powered by Dart language.
-version: 0.2.2
+version: 0.2.3
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky_cli
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -13,13 +14,13 @@ executables:
   bsky:
 
 dependencies:
-  xrpc: ^0.0.14
-  at_uri: ^0.0.3
+  xrpc: ^0.1.5
+  at_uri: ^0.1.1
   ansi_styles: ^0.3.1
   args: ^2.0.0
   cli_launcher: ^0.3.0
   cli_util: ^0.3.0
-  bluesky_text: ^0.1.1
+  bluesky_text: ^0.2.3
 
 dev_dependencies:
   lints: ^2.0.0
