--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -1,6 +1,7 @@
 name: lexicon
 description: AT Protocol standard Lexicon objects for Dart and Flutter
 version: 0.0.0
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/packages/lexicon
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
