--- a/packages/nsid/pubspec.yaml
+++ b/packages/nsid/pubspec.yaml
@@ -1,6 +1,7 @@
 name: nsid
 description: Provide standard NSID object supported by AT Protocol to Dart/Flutter.
-version: 0.1.0
+version: 0.1.1
+homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/nsid
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
