--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   cbor: ^6.0.0
   multiformats: ^0.1.4
+  universal_io: ^2.2.2
 
 dev_dependencies:
   lints: ^2.0.0
