--- a/packages/multiformats/pubspec.yaml
+++ b/packages/multiformats/pubspec.yaml
@@ -13,7 +13,7 @@ environment:
 dependencies:
   base_codecs: ^1.0.1
   crypto: ^3.0.3
-  dart_multihash: 0.2.1
+  dart_multihash: ^0.2.1
 
 dev_dependencies:
   lints: ^2.0.0
