fix: added dependency override

--- a/packages/bluesky_cli/pubspec_overrides.yaml
+++ b/packages/bluesky_cli/pubspec_overrides.yaml
@@ -3,5 +3,7 @@ dependency_overrides:
     path: ../at_uri
   xrpc:
     path: ../xrpc
+  atproto:
+    path: ../atproto
   bluesky_text:
     path: ../bluesky_text
