--- a/packages/bluesky_cli/pubspec_overrides.yaml
+++ b/packages/bluesky_cli/pubspec_overrides.yaml
@@ -3,6 +3,8 @@ dependency_overrides:
     path: ../at_uri
   xrpc:
     path: ../xrpc
+  atproto_core:
+    path: ../atproto_core
   atproto:
     path: ../atproto
   bluesky_text:
