feat: added `asJson` methods (#563)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,7 @@
   ],
   "[markdown]": {
     "editor.wordWrap": "off"
-  }
+  },
+  "editor.fontFamily": "Fira Code",
+  "editor.fontLigatures": true,
 }
