--- a/examples/bluesky/pubspec.yaml
+++ b/examples/bluesky/pubspec.yaml
@@ -1,6 +1,7 @@
 name: bluesky_example
 description: A sample command-line application.
 version: 1.0.0
+publish_to: none
 
 environment:
   sdk: ^3.0.1
