--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -17,11 +17,13 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.1
   test: ^1.23.1
-  atproto_test: ^0.1.2
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
   freezed: ^2.3.2
   import_sorter: ^4.6.0
+
+  atproto_test:
+    path: ../atproto_test
 
 import_sorter:
   emojis: true
