--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -1,17 +1,13 @@
 name: atproto_test
 description: This package provides core reusable and useful functionality for testing atproto based packages.
-version: 0.1.2
-homepage: https://atprotodart.com
-repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_test
-issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
-funding:
-  - https://github.com/sponsors/myConsciousness
+version: 0.2.0
+publish_to: none
 environment:
   sdk: ">=2.17.0 <4.0.0"
 
 dependencies:
   test: ^1.21.0
-  xrpc: ^0.1.5
+  xrpc: ^0.2.1
   http: ^0.13.6
   universal_io: ^2.2.2
 
