--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
 description: This package provides core reusable and useful functionality for wrapping At Protocol and related services.
-version: 0.4.2
+version: 0.4.3
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -21,6 +21,9 @@ dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
   import_sorter: ^4.6.0
+
+  atproto_test:
+    path: ../atproto_test
 
 import_sorter:
   emojis: true
