--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
-description: This package provides core reusable and useful functionality for wrapping At Protocol and related services.
-version: 0.4.3
+description: This package provides core reusable and useful functionality for wrapping AT Protocol and related services.
+version: 0.4.4
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
