--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -6,8 +6,14 @@ repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/b
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
+
 environment:
   sdk: ">=2.17.0 <4.0.0"
+
+topics:
+  - atproto
+  - bluesky
+  - api
 
 dependencies:
   atproto_core: ^0.4.4
