--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -6,8 +6,15 @@ repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/a
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
+
 environment:
   sdk: ">=2.17.0 <4.0.0"
+
+topics:
+  - atproto
+  - bluesky
+  - api
+  - core
 
 dependencies:
   xrpc: ^0.2.1
