--- a/packages/bluesky_text/pubspec.yaml
+++ b/packages/bluesky_text/pubspec.yaml
@@ -10,6 +10,12 @@ funding:
 environment:
   sdk: ">=2.17.0 <4.0.0"
 
+topics:
+  - atproto
+  - bluesky
+  - api
+  - util
+
 dependencies:
   xrpc: ^0.2.1
   characters: ^1.3.0
