--- a/packages/nsid/pubspec.yaml
+++ b/packages/nsid/pubspec.yaml
@@ -10,6 +10,11 @@ funding:
 environment:
   sdk: ">=2.17.0 <4.0.0"
 
+topics:
+  - atproto
+  - bluesky
+  - nsid
+
 dev_dependencies:
   lints: ^2.0.0
   test: ^1.21.0
