--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -10,6 +10,12 @@ funding:
 environment:
   sdk: ">=2.17.0 <4.0.0"
 
+topics:
+  - atproto
+  - bluesky
+  - http
+  - xrpc
+
 dependencies:
   http: ^0.13.6
   meta: ^1.8.0
