--- a/.github/workflows/auto_mirror_lexicons.yml
+++ b/.github/workflows/auto_mirror_lexicons.yml
@@ -37,6 +37,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
 
+      - name: Generate Lexicon IDs
+        run: dart run ./bin/generate_lexicon_ids.dart
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
