--- a/.github/workflows/auto_mirror_lexicons.yml
+++ b/.github/workflows/auto_mirror_lexicons.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Generate Lexicon IDs
         run: dart run ./bin/generate_lexicon_ids.dart
 
+      - name: Format All
+        run: melos format
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
