🚀 feat: added `.waitUntilReset` (#643)

--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   json_annotation: ^4.8.0
   mime: ^1.0.4
   web_socket_channel: ^2.4.0
+  universal_io: ^2.2.2
 
 dev_dependencies:
   lints: ^2.0.0
