📖 docs: improved docs (#646)

--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -1,5 +1,5 @@
 name: atproto
-description: The easiest and powerful Dart/Flutter library for AT Protocol.
+description: The most famous and powerful Dart/Flutter library for AT Protocol.
 version: 0.5.8
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto
