--- a/.github/workflows/auto_mirror_lexicons.yml
+++ b/.github/workflows/auto_mirror_lexicons.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Generate Lexicon IDs
         run: dart run ./bin/generate_lexicon_ids.dart
 
+      - name: Activate Melos
+        run: dart pub global activate melos
+
       - name: Format All
         run: melos format
 
