--- a/packages/at_identifier/pubspec.yaml
+++ b/packages/at_identifier/pubspec.yaml
@@ -1,6 +1,6 @@
 name: at_identifier
 description: Provide standard validation for identifier supported by AT Protocol to Dart/Flutter.
-version: 0.1.1
+version: 0.2.0
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_identifier
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ^3.0.0
 
 topics:
   - atproto
