--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto
 description: The most famous and powerful Dart/Flutter library for AT Protocol.
-version: 0.5.9
+version: 0.6.0
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ^3.0.0
 
 topics:
   - atproto
@@ -16,7 +16,7 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^0.4.6
+  atproto_core: ^0.5.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
 
