--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
 description: This package provides core reusable and useful functionality for wrapping AT Protocol and related services.
-version: 0.4.6
+version: 0.5.0
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ^3.0.0
 
 topics:
   - atproto
@@ -17,11 +17,11 @@ topics:
   - core
 
 dependencies:
-  xrpc: ^0.2.2
-  at_uri: ^0.1.1
+  xrpc: ^0.3.0
+  at_uri: ^0.2.0
   freezed_annotation: ^2.2.0
   cbor: ^6.0.0
-  multiformats: ^0.1.4
+  multiformats: ^0.2.0
   universal_io: ^2.2.2
 
 dev_dependencies:
