--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -3,11 +3,11 @@ description: This package provides core reusable and useful functionality for te
 version: 0.2.0
 publish_to: none
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ^3.0.0
 
 dependencies:
   test: ^1.21.0
-  xrpc: ^0.2.1
+  xrpc: ^0.3.0
   http: ^0.13.6
   universal_io: ^2.2.2
 
