--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xrpc
 description: Provide an HTTP client specialized for XRPC communication in AT Protocol.
-version: 0.2.2
+version: 0.3.0
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ^3.0.0
 
 topics:
   - atproto
@@ -19,7 +19,7 @@ topics:
 dependencies:
   http: ^0.13.6
   meta: ^1.8.0
-  nsid: ^0.1.1
+  nsid: ^0.2.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.0
   mime: ^1.0.4
