--- a/packages/bluesky_post/pubspec_overrides.yaml
+++ b/packages/bluesky_post/pubspec_overrides.yaml
@@ -1,4 +1,10 @@
 dependency_overrides:
+  at_identifier:
+    path: ../at_identifier
+  nsid:
+    path: ../nsid
+  at_uri:
+    path: ../at_uri
   xrpc:
     path: ../xrpc
   multiformats:
