--- a/.github/workflows/auto_mirror_lexicons.yml
+++ b/.github/workflows/auto_mirror_lexicons.yml
@@ -3,7 +3,7 @@ name: Auto Mirror Lexicons
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 10 * * *"
+    - cron: "* */3 * * *"
 
 jobs:
   build:
