--- a/melos.yaml
+++ b/melos.yaml
@@ -39,8 +39,8 @@ scripts:
 
   build_runner:
     run: |
-      melos exec -c 10 -- \
-        dart run build_runner build
+      melos exec -c 1 -- \
+        dart run build_runner build --delete-conflicting-outputs
     description: Run build_runner and melos format in all packages.
 
   test:
