--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
 description: This package provides core reusable and useful functionality for wrapping AT Protocol and related services.
-version: 0.5.1
+version: 0.5.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -20,6 +20,7 @@ dependencies:
   xrpc: ^0.3.1
   at_uri: ^0.2.1
   freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   cbor: ^6.1.1
   multiformats: ^0.2.1
   universal_io: ^2.2.2
@@ -27,6 +28,9 @@ dependencies:
 dev_dependencies:
   lints: ^2.0.1
   test: ^1.21.0
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
+  freezed: ^2.4.2
   import_sorter: ^4.6.0
 
   atproto_test:
