--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "Facetable",
     "fullsize",
     "groupable",
+    "icann",
     "IPFS",
     "Ipld",
     "Kato",
@@ -41,6 +42,7 @@
     "Shinya",
     "shinyakato",
     "sublist",
+    "tlds",
     "Typeahead",
     "Unmute",
     "Unspecced",
