--- a/packages/at_uri/pubspec.yaml
+++ b/packages/at_uri/pubspec.yaml
@@ -1,6 +1,6 @@
 name: at_uri
 description: Provide standard uri supported by AT Protocol to Dart/Flutter.
-version: 0.2.1
+version: 0.2.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_uri
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -27,3 +27,7 @@ dev_dependencies:
 
 import_sorter:
   emojis: true
+
+screenshots:
+  - description: The at_uri package and atproto.dart logo.
+    path: screenshots/logo.png
