--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "bskyc",
     "Cbor",
     "cids",
+    "Curatelist",
     "dartdoc",
     "delim",
     "dids",
@@ -52,5 +53,5 @@
     "editor.wordWrap": "off"
   },
   "editor.fontFamily": "Fira Code",
-  "editor.fontLigatures": true,
+  "editor.fontLigatures": true
 }
