--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -2,6 +2,7 @@ name: xrpc
 description: Provide an HTTP client specialized for XRPC communication in AT Protocol.
 version: 0.3.2
 homepage: https://atprotodart.com
+documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
@@ -35,3 +36,7 @@ dev_dependencies:
 
 import_sorter:
   emojis: true
+
+screenshots:
+  - description: The xrpc package and atproto.dart logo.
+    path: screenshots/logo.png
