✨ feat: better tag extraction (#897)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,9 @@
     "cids",
     "Curatelist",
     "dartdoc",
+    "DBFF",
     "delim",
+    "DFFF",
     "dids",
     "downvote",
     "embeddable",
