--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "DFFF",
     "dids",
     "downvote",
+    "Doxxing",
     "embeddable",
     "Facetable",
     "fullsize",
@@ -28,12 +29,14 @@
     "listblock",
     "listitem",
     "Lucene",
+    "misinfo",
     "modlist",
     "Multibase",
     "Multicodec",
     "multicodecs",
     "multiformats",
     "Multihash",
+    "nsfl",
     "NSID",
     "Pageable",
     "paginations",
