--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "atproto",
     "ATURI",
+    "authed",
     "Bluesky",
     "bsky",
     "bskyc",
@@ -58,6 +59,7 @@
     "Threadgate",
     "tlds",
     "Typeahead",
+    "unauthed",
     "Unfollowed",
     "Unmute",
     "Unspecced",
